<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_yellow_mustard"
    tools:context=".screens.signUp.SignUpFragment">

    <TextView
        android:id="@+id/titleComunica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/comunica"
        android:textColor="@color/red"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/titleLibras"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleLibras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/libras"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/titleComunica"
        app:layout_constraintTop_toTopOf="@id/titleComunica" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/cadastro"
        android:textColor="@color/navy_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/nomeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleComunica"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/nomeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:labelFor="@id/nomeInputLayout"
        android:text="@string/nome"
        android:textColor="@color/navy_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/nomeInputLayout"
        app:layout_constraintStart_toStartOf="@id/nomeInputLayout"
        app:layout_constraintTop_toBottomOf="@id/textDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nomeInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginBottom="16dp"
        app:boxBackgroundColor="@color/navy_blue"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/loginLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nomeInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:inputType="textWebEmailAddress"
            android:textColor="@color/background_yellow_mustard"
            android:textColorHint="@color/background_yellow_mustard" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/loginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:labelFor="@id/nomeInputLayout"
        android:text="@string/login"
        android:textColor="@color/navy_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/loginInputLayout"
        app:layout_constraintStart_toStartOf="@id/nomeInputLayout"
        app:layout_constraintTop_toBottomOf="@id/nomeInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginBottom="16dp"
        app:boxBackgroundColor="@color/navy_blue"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/passwordLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:inputType="textWebEmailAddress"
            android:textColor="@color/background_yellow_mustard"
            android:textColorHint="@color/background_yellow_mustard" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:labelFor="@id/passwordInputLayout"
        android:text="@string/senha"
        android:textColor="@color/navy_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/passwordInputLayout"
        app:layout_constraintStart_toStartOf="@id/nomeInputLayout"
        app:layout_constraintTop_toBottomOf="@id/loginInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginBottom="16dp"
        app:boxBackgroundColor="@color/navy_blue"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/buttonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:textColor="@color/background_yellow_mustard"
            android:textColorHint="@color/background_yellow_mustard" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/red"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>