<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8E6BE"
    tools:context=".screens.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background_yellow_mustard"
        android:minHeight="55dp"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:src="#B1B0B0" />

            <TextView
                android:id="@+id/appBarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/userImage"
                android:layout_alignBottom="@id/userImage"
                android:layout_margin="8dp"
                android:layout_toEndOf="@id/userImage"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                tools:text="Olá, Evelyn" />

            <Button
                android:id="@+id/buttonSignOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/userImage"
                android:layout_alignBottom="@id/userImage"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/red"
                android:text="@string/sair" />

        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/titleComunica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/comunica"
        android:textColor="@color/red"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/listTitle"
        app:layout_constraintEnd_toStartOf="@id/titleLibras"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar" />

    <TextView
        android:id="@+id/titleLibras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/libras"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/titleComunica"
        app:layout_constraintTop_toTopOf="@id/titleComunica" />

    <TextView
        android:id="@+id/listTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        app:layout_constraintBottom_toTopOf="@id/recyclerClasses"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleComunica"
        android:text="@string/aulas"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerClasses"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        tools:listitem="@layout/item_home_classes"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>